마이페이지창 추가했습니다.

--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -7,234 +7,197 @@
 
     <ImageView
         android:id="@+id/imglogo"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
+        android:layout_marginTop="28dp"
+        android:src="@drawable/logo"
         android:layout_marginLeft="10sp"
-        android:layout_marginTop="60sp"
-        android:src="@drawable/profile"
-        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ImageView
-        android:layout_width="40sp"
-        android:layout_height="40sp"
-        android:layout_marginTop="132dp"
-        android:background="@drawable/camera"
-        app:layout_constraintHorizontal_bias="0.579"
+    <TextView
+        android:id="@+id/title"
+        android:fontFamily="@font/font_signiture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="회원가입 "
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="10sp"
+        android:textSize="32sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/imglogo"
+        app:layout_constraintBottom_toBottomOf="@id/imglogo"
+        android:textColor="@color/navy"
+        />
 
-    <LinearLayout
-        android:id="@+id/layout1"
+    <EditText
+        android:id="@+id/name_edit"
         android:layout_width="100sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:layout_marginTop="70sp"
+        android:layout_height="36sp"
+        android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/imglogo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/layout2"
-        android:layout_marginRight="200sp"
-        >
-
-        <EditText
-            android:id="@+id/name_edit"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="  이름   "
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout2"
-        android:layout_width="300sp"
-        android:layout_height="40sp"
-        android:gravity="center"
+        android:hint="  이름   "
         android:layout_marginTop="20sp"
+        app:layout_constraintTop_toBottomOf="@id/imglogo"
+        app:layout_constraintLeft_toLeftOf="@id/id_edit"
+        />
+
+    <EditText
+        android:id="@+id/id_edit"
+        android:layout_width="282sp"
+        android:layout_height="36sp"
+        android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/layout1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-
-
-        <EditText
-            android:id="@+id/id_edit"
-            android:layout_width="match_parent"
-            android:layout_height="40sp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="  아이디 입력  "
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout3_1"
-        android:layout_width="200sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:hint="  아이디 입력   "
+        android:layout_marginLeft="18sp"
         android:layout_marginTop="20sp"
-        android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/layout2"
+        app:layout_constraintRight_toLeftOf="@id/id_chk_btn"
+        app:layout_constraintTop_toBottomOf="@id/name_edit"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="101sp"
-        >
-
-
-        <EditText
-            android:id="@+id/nickname"
-            android:layout_width="match_parent"
-            android:layout_height="40sp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="  이용하실 닉네임 입력  "
-            />
-    </LinearLayout>
-
+        />
 
     <Button
-        android:id="@+id/nickname_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="40sp"
-        android:text="중복확인"
+        android:id="@+id/id_chk_btn"
+        android:layout_width="78sp"
+        android:layout_height="36sp"
+        android:text="중복 확인"
         android:textColor="@color/white"
-        app:layout_constraintLeft_toRightOf="@+id/layout3_1"
-        app:layout_constraintTop_toBottomOf="@+id/layout2"
         android:layout_marginTop="20sp"
         android:layout_marginLeft="12sp"
-        android:background="@drawable/loginbutton_custom"
+        app:layout_constraintLeft_toRightOf="@id/id_edit"
+        app:layout_constraintRight_toRightOf="@id/password_edit"
+        app:layout_constraintTop_toBottomOf="@id/name_edit"
+        android:background="@drawable/loginbutton_custom" />
+
+    <TextView
+        android:id="@+id/caution_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="중복되는 아이디입니다. 다시 설정해주세요."
+        android:textSize="12sp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="10sp"
+        android:textColor="@color/red"
+        app:layout_constraintTop_toBottomOf="@id/id_edit"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+
+
+    <EditText
+        android:id="@+id/password_edit"
+        android:layout_width="375sp"
+        android:layout_height="36sp"
+        android:layout_gravity="center"
+        android:background="@drawable/edittext_custom"
+        android:hint="  비밀번호 입력   "
+        android:layout_marginTop="10sp"
+        app:layout_constraintTop_toBottomOf="@id/caution_tv"
+        app:layout_constraintLeft_toLeftOf="@id/id_edit"
         />
 
-    <LinearLayout
-        android:layout_width="300sp"
-        android:layout_height="45sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout1"
-        android:layout_marginTop="140sp"
-        android:gravity="left"
-        android:background="@drawable/edittext_custom"
-        android:id="@+id/layout1_1"
-        >
-        <EditText
-            android:id="@+id/newpw_et"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="비밀번호 입력"
-            android:layout_marginLeft="10sp"
-            android:background="@null"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layout2_1"
-        android:layout_width="300sp"
-        android:layout_height="45sp"
-        android:layout_marginTop="20sp"
-        android:background="@drawable/edittext_custom"
-        android:gravity="left"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout1_1">
 
-        <EditText
-            android:id="@+id/newpw_et2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10sp"
-            android:background="@null"
-            android:hint="비밀번호 확인" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout3"
-        android:layout_width="300sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:layout_marginTop="20sp"
+    <EditText
+        android:id="@+id/password_chk_edit"
+        android:layout_width="282sp"
+        android:layout_height="36sp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="18sp"
+        android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/layout2_1"
+        android:hint="  비밀번호 재입력   "
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-        <EditText
-            android:id="@+id/phone_edit"
-            android:layout_width="match_parent"
-            android:layout_height="40sp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="  전화번호 입력  "
-            />
-    </LinearLayout>
+        app:layout_constraintRight_toLeftOf="@id/pw_chk_btn"
+        app:layout_constraintTop_toBottomOf="@id/password_edit" />
 
     <Button
-        android:id="@+id/send_btn"
-        android:layout_width="150sp"
-        android:layout_height="50sp"
-        android:layout_gravity="right"
-        android:text="인증번호 받기"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout3"
-        android:layout_marginTop="20sp"
-        android:layout_marginLeft="150sp"
-        android:background="@drawable/loginbutton_custom"
+        android:id="@+id/pw_chk_btn"
+        android:layout_width="78sp"
+        android:layout_height="36sp"
+        android:text="확인"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        />
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="12sp"
+        app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
+        app:layout_constraintRight_toRightOf="@id/password_edit"
+        app:layout_constraintTop_toBottomOf="@id/password_edit"
+        android:background="@drawable/loginbutton_custom" />
 
-    <LinearLayout
-        android:id="@+id/layout4"
-        android:layout_width="300sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:layout_marginTop="20sp"
+    <TextView
+        android:id="@+id/caution_tv2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최소 10자 이상 입력해주세요."
+        android:textSize="12sp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="10sp"
+        android:textColor="@color/red"
+        app:layout_constraintTop_toBottomOf="@id/password_chk_edit"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/phone_edit"
+        android:layout_width="282sp"
+        android:layout_height="36sp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="18sp"
+        android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/send_btn"
+        android:hint="  전화번호 입력   "
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-
-
-        <EditText
-            android:id="@+id/certification_edit"
-            android:layout_width="300sp"
-            android:layout_height="40sp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="  인증번호를 입력해 주세요." />
-
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@id/caution_tv2" />
 
     <Button
-        android:id="@+id/certification_btn"
-        android:layout_width="150sp"
-        android:layout_height="50sp"
-        android:layout_gravity="right"
-        android:text="인증번호 인증"
+        android:id="@+id/phone_chk_btn"
+        android:layout_width="78sp"
+        android:layout_height="36sp"
+        android:text="인증번호받기"
+        android:textColor="@color/white"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="12sp"
+        app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
+        app:layout_constraintRight_toRightOf="@id/password_edit"
+        app:layout_constraintTop_toBottomOf="@id/caution_tv2"
+        android:background="@drawable/loginbutton_custom" />
+
+    <EditText
+        android:id="@+id/phone_chk_edit"
+        android:layout_width="282sp"
+        android:layout_height="36sp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="18sp"
+        android:layout_marginTop="10sp"
+        android:background="@drawable/edittext_custom"
+        android:hint="  인증번호 입력   "
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/phone_edit" />
+
+    <Button
+        android:id="@+id/phone_chk_btn2"
+        android:layout_width="78sp"
+        android:layout_height="36sp"
+        android:text="인증확인"
+        android:textColor="@color/white"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="12sp"
+        app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
+        app:layout_constraintRight_toRightOf="@id/password_edit"
+        app:layout_constraintTop_toBottomOf="@id/phone_chk_btn"
+        android:background="@drawable/loginbutton_custom" />
+
+    <Button
+        android:layout_width="375sp"
+        android:layout_height="42sp"
+        android:text="가입완료"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout4"
-        android:layout_marginTop="20sp"
-        android:layout_marginLeft="150sp"
-        android:background="@drawable/loginbutton_custom"
+        app:layout_constraintTop_toBottomOf="@id/phone_chk_edit"
+        android:layout_marginTop="320sp"
+        android:textSize="15sp"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:background="@drawable/loginbutton_custom"
         />
 
 
