--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="pink">#FE7BE5</color>
     <color name="blue">#0E25A1</color>
     <color name="graphite">#242425</color>
+    <color name="red">#CF1C0E</color>
 
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#ffffff</color>
