관심목록 업데이트

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -57,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="110sp"
+                    android:layout_marginLeft="140sp"
                     android:text="프로필 보기"
                     android:textSize="14sp"
                     android:textStyle="bold"
@@ -104,6 +104,7 @@
 
                         <!--            리스트입니다. -->
                         <LinearLayout
+                            android:id="@+id/mypage_interest_layout"
                             android:layout_width="match_parent"
                             android:layout_height="60sp"
                             android:layout_gravity="center"
