--- a/app/src/main/res/layout/mypage_interest.xml
+++ b/app/src/main/res/layout/mypage_interest.xml
@@ -23,28 +23,31 @@
 
         <RadioButton
             android:id="@+id/all_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="전체"
+            android:layout_width="50dp"
+            android:layout_height="34dp"
             android:checked="true"
             android:layout_marginRight="10sp"
-            android:textSize="18sp"
+            android:background="@drawable/radiocheck_custom_mypage1"
+            android:button="@null"
             />
 
         <RadioButton
             android:id="@+id/personal_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="개인 종목"
-            android:textSize="18sp"
-            android:layout_marginRight="10sp"/>
+            android:layout_width="79dp"
+            android:layout_height="34dp"
+            android:layout_marginRight="10sp"
+            android:button="@null"
+            android:background="@drawable/radiocheck_custom_mypage2"
+            />
 
         <RadioButton
             android:id="@+id/team_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="팀 종목"/>
+            android:layout_width="79dp"
+            android:layout_height="34dp"
+            android:button="@null"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/radiocheck_custom_mypage3"
+            />
 
     </RadioGroup>
 
