--- a/app/src/main/res/layout/mypage_interest_item.xml
+++ b/app/src/main/res/layout/mypage_interest_item.xml
@@ -83,6 +83,7 @@
         />
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
