--- a/app/src/main/res/layout/mypage_interest_item.xml
+++ b/app/src/main/res/layout/mypage_interest_item.xml
@@ -54,8 +54,8 @@
         android:id="@+id/more_btn"
         android:layout_marginTop="20sp"
         android:layout_marginRight="20sp"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
+        android:layout_width="40sp"
+        android:layout_height="40sp"
         android:background="@drawable/icon_more"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -86,6 +86,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:background="@color/gray"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10sp"
