--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -49,6 +49,7 @@
                     android:text="도구리"
                     android:textStyle="bold"
                     android:textSize="21sp"
+                    android:textColor="@color/black"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20sp" />
 
@@ -99,6 +100,7 @@
                             android:layout_marginLeft="20sp"
                             android:layout_marginTop="10sp"
                             android:text="나의 매치"
+                            android:textColor="@color/black"
                             android:textSize="23sp"
                             android:textStyle="bold" />
 
@@ -123,10 +125,12 @@
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="21sp"
                                 android:text="관심목록"
+                                android:textColor="@color/black"
                                 android:textSize="21sp" />
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/mypage_match_layout"
                             android:layout_width="match_parent"
                             android:layout_height="60sp"
                             android:layout_gravity="center">
@@ -144,6 +148,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="21sp"
                                 android:text="매치글 게시내역"
+                                android:textColor="@color/black"
                                 android:textSize="21sp" />
                         </LinearLayout>
 
@@ -165,6 +170,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="21sp"
                                 android:text="도전장 발신내역"
+                                android:textColor="@color/black"
                                 android:textSize="21sp" />
                         </LinearLayout>
 
@@ -185,6 +191,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="21sp"
+                                android:textColor="@color/black"
                                 android:text="나의 랭킹"
                                 android:textSize="21sp" />
                         </LinearLayout>
@@ -197,6 +204,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20sp"
                         android:layout_marginTop="10sp"
+                        android:textColor="@color/black"
                         android:text="팀 매치"
                         android:textSize="23sp"
                         android:textStyle="bold" />
@@ -220,6 +228,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="24sp"
+                            android:textColor="@color/black"
                             android:text="나의 팀 목록"
                             android:textSize="21sp" />
                     </LinearLayout>
@@ -242,6 +251,7 @@
                             android:layout_gravity="center"
                             android:layout_marginLeft="21sp"
                             android:text="팀 매치글 게시내역"
+                            android:textColor="@color/black"
                             android:textSize="21sp" />
                     </LinearLayout>
 
@@ -262,6 +272,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="21sp"
+                            android:textColor="@color/black"
                             android:text="팀 도전장 발신내역"
                             android:textSize="21sp" />
                     </LinearLayout>
@@ -283,6 +294,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="21sp"
+                            android:textColor="@color/black"
                             android:text="팀 랭킹"
                             android:textSize="21sp" />
                     </LinearLayout>
@@ -295,6 +307,7 @@
                     android:layout_height="wrap_content"
                     android:text="기타"
                     android:textSize="23sp"
+                    android:textColor="@color/black"
                     android:textStyle="bold"
                     android:layout_marginLeft="20sp"
                     android:layout_marginTop="10sp"
@@ -319,6 +332,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="내동네 설정"
+                        android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:layout_marginLeft="21sp"
                         android:textSize="21sp" />
@@ -342,6 +356,7 @@
                         android:layout_height="wrap_content"
                         android:text="동네 인증하기"
                         android:layout_gravity="center"
+                        android:textColor="@color/black"
                         android:layout_marginLeft="24sp"
                         android:textSize="21sp" />
                 </LinearLayout>
@@ -363,6 +378,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="알림 키워드 설정"
+                        android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:layout_marginLeft="24sp"
                         android:textSize="21sp" />
@@ -386,6 +402,7 @@
                         android:layout_height="wrap_content"
                         android:text="자주 묻는 질문"
                         android:layout_gravity="center"
+                        android:textColor="@color/black"
                         android:layout_marginLeft="24sp"
                         android:textSize="21sp" />
                 </LinearLayout>
@@ -408,6 +425,7 @@
                         android:layout_height="wrap_content"
                         android:text="건의 사항"
                         android:layout_gravity="center"
+                        android:textColor="@color/black"
                         android:layout_marginLeft="24sp"
                         android:textSize="21sp" />
                 </LinearLayout>
