--- a/app/src/main/res/layout/fragment_mypage_match_3.xml
+++ b/app/src/main/res/layout/fragment_mypage_match_3.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_1"
@@ -10,6 +12,7 @@
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        tools:listitem="@layout/mypage_match_item3"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
