--- a/app/src/main/res/layout/mypage_match.xml
+++ b/app/src/main/res/layout/mypage_match.xml
@@ -14,7 +14,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/title"
         android:text="나의 대결내역"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -26,15 +26,15 @@
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
-        android:id="@+id/btn_write"
+        android:id="@+id/write_btn"
         android:text="글쓰기"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
-        app:layout_constraintTop_toBottomOf="@id/text"
-        app:layout_constraintLeft_toLeftOf="@+id/text"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintLeft_toLeftOf="@+id/title"
         app:layout_constraintBottom_toTopOf="@+id/tabLayout"/>
 
     <ImageView
@@ -43,28 +43,31 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_marginRight="24dp"
-        app:layout_constraintTop_toTopOf="@+id/text"
+        app:layout_constraintTop_toTopOf="@+id/title"
         app:layout_constraintRight_toRightOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btn_write"
+        app:layout_constraintTop_toBottomOf="@+id/write_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:tabIndicatorColor="@color/navy">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/matching"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="매칭 중"/>
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/matched"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="매칭완료"/>
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/match_hide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="숨김"/>
