마이페이지 리스트에 아이콘을 수정했습니다. 피드백주심 감사하모니카

--- a/app/src/main/res/layout/mypage_badge.xml
+++ b/app/src/main/res/layout/mypage_badge.xml
@@ -42,7 +42,7 @@
         android:id="@+id/iv1"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:background="@drawable/medal"
+        android:background="@drawable/bedge_icon"
         android:layout_marginTop="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
