--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -113,11 +113,11 @@
                             android:layout_marginTop="10sp">
 
                             <ImageView
-                                android:layout_width="26sp"
-                                android:layout_height="22sp"
+                                android:layout_width="24sp"
+                                android:layout_height="24sp"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="20sp"
-                                android:background="@drawable/selector_icon_heart"/>
+                                android:background="@drawable/heart_icon"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -136,11 +136,11 @@
                             android:layout_gravity="center">
 
                             <ImageView
-                                android:layout_width="26sp"
-                                android:layout_height="22sp"
+                                android:layout_width="24sp"
+                                android:layout_height="24sp"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="20sp"
-                                android:background="@drawable/google_docs" />
+                                android:background="@drawable/docs_icon" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -158,11 +158,11 @@
                             android:layout_gravity="center">
 
                             <ImageView
-                                android:layout_width="32sp"
-                                android:layout_height="22sp"
+                                android:layout_width="24sp"
+                                android:layout_height="24sp"
                                 android:layout_gravity="center"
-                                android:layout_marginLeft="15sp"
-                                android:background="@drawable/send_mail" />
+                                android:layout_marginLeft="20sp"
+                                android:background="@drawable/message_icon" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -180,11 +180,11 @@
                             android:layout_gravity="center">
 
                             <ImageView
-                                android:layout_width="28sp"
-                                android:layout_height="28sp"
+                                android:layout_width="24sp"
+                                android:layout_height="24sp"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="20sp"
-                                android:background="@drawable/medal" />
+                                android:background="@drawable/bedge_icon" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -217,11 +217,11 @@
                         android:layout_marginTop="10sp">
 
                         <ImageView
-                            android:layout_width="26sp"
+                            android:layout_width="24sp"
                             android:layout_height="24sp"
                             android:layout_gravity="center"
                             android:layout_marginLeft="20sp"
-                            android:background="@drawable/icon_peoples" />
+                            android:background="@drawable/group_icon" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -239,11 +239,11 @@
                         android:layout_gravity="center">
 
                         <ImageView
-                            android:layout_width="26sp"
-                            android:layout_height="22sp"
+                            android:layout_width="24sp"
+                            android:layout_height="24sp"
                             android:layout_gravity="center"
                             android:layout_marginLeft="20sp"
-                            android:background="@drawable/google_docs" />
+                            android:background="@drawable/docs_icon" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -261,11 +261,11 @@
                         android:layout_gravity="center">
 
                         <ImageView
-                            android:layout_width="32sp"
-                            android:layout_height="22sp"
+                            android:layout_width="24sp"
+                            android:layout_height="24sp"
                             android:layout_gravity="center"
-                            android:layout_marginLeft="15sp"
-                            android:background="@drawable/send_mail" />
+                            android:layout_marginLeft="20sp"
+                            android:background="@drawable/message_icon" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -283,11 +283,11 @@
                         android:layout_gravity="center">
 
                         <ImageView
-                            android:layout_width="28sp"
-                            android:layout_height="28sp"
+                            android:layout_width="24sp"
+                            android:layout_height="24sp"
                             android:layout_gravity="center"
                             android:layout_marginLeft="20sp"
-                            android:background="@drawable/medal" />
+                            android:background="@drawable/bedge_icon" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -322,11 +322,11 @@
                     >
 
                     <ImageView
-                        android:layout_width="28sp"
-                        android:layout_height="25sp"
+                        android:layout_width="24sp"
+                        android:layout_height="24sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20sp"
-                        android:background="@drawable/icon_gps1" />
+                        android:background="@drawable/pin_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -345,11 +345,11 @@
                     >
 
                     <ImageView
-                        android:layout_width="28sp"
-                        android:layout_height="28sp"
+                        android:layout_width="24sp"
+                        android:layout_height="24sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20sp"
-                        android:background="@drawable/icon_gps2" />
+                        android:background="@drawable/globe_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -368,11 +368,11 @@
                     >
 
                     <ImageView
-                        android:layout_width="26sp"
-                        android:layout_height="22sp"
+                        android:layout_width="24sp"
+                        android:layout_height="24sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20sp"
-                        android:background="@drawable/icon_tag" />
+                        android:background="@drawable/notification_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -391,11 +391,11 @@
                     >
 
                     <ImageView
-                        android:layout_width="26sp"
-                        android:layout_height="22sp"
+                        android:layout_width="24sp"
+                        android:layout_height="24sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20sp"
-                        android:background="@drawable/icon_headset" />
+                        android:background="@drawable/headset_help_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -414,11 +414,11 @@
                     >
 
                     <ImageView
-                        android:layout_width="26sp"
+                        android:layout_width="24sp"
                         android:layout_height="24sp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20sp"
-                        android:background="@drawable/icon_question" />
+                        android:background="@drawable/question_mark_circle_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
