--- a/app/src/main/res/layout/mypage_interest_item.xml
+++ b/app/src/main/res/layout/mypage_interest_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/profile_image"
         android:layout_width="60sp"
         android:layout_height="60sp"
-        android:src="@drawable/medal"
+        android:src="@drawable/bedge_icon"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFFFFF"
         android:layout_marginLeft="10sp"
