--- a/app/src/main/res/layout/mypage_profile.xml
+++ b/app/src/main/res/layout/mypage_profile.xml
@@ -24,7 +24,7 @@
             android:id="@+id/profile_image"
             android:layout_width="70sp"
             android:layout_height="70sp"
-            android:src="@drawable/medal"
+            android:src="@drawable/bedge_icon"
             app:civ_border_width="2dp"
             app:civ_border_color="#FFFFFF"
             android:layout_marginLeft="20sp"
