--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -34,11 +34,12 @@
 
     <EditText
         android:id="@+id/name_edit"
-        android:layout_width="100sp"
-        android:layout_height="36sp"
+        android:layout_width="375sp"
+        android:layout_height="45sp"
         android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
-        android:hint="  이름   "
+        android:paddingLeft="10sp"
+        android:hint="이름"
         android:layout_marginTop="20sp"
         app:layout_constraintTop_toBottomOf="@id/imglogo"
         app:layout_constraintLeft_toLeftOf="@id/id_edit"
@@ -46,13 +47,14 @@
 
     <EditText
         android:id="@+id/id_edit"
-        android:layout_width="282sp"
-        android:layout_height="36sp"
+        android:layout_width="242sp"
+        android:layout_height="45sp"
         android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
-        android:hint="  아이디 입력   "
+        android:paddingLeft="10sp"
+        android:hint="아이디 입력"
         android:layout_marginLeft="18sp"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintRight_toLeftOf="@id/id_chk_btn"
         app:layout_constraintTop_toBottomOf="@id/name_edit"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -60,11 +62,11 @@
 
     <Button
         android:id="@+id/id_chk_btn"
-        android:layout_width="78sp"
-        android:layout_height="36sp"
+        android:layout_width="118sp"
+        android:layout_height="45sp"
         android:text="중복 확인"
         android:textColor="@color/white"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="10sp"
         android:layout_marginLeft="12sp"
         app:layout_constraintLeft_toRightOf="@id/id_edit"
         app:layout_constraintRight_toRightOf="@id/password_edit"
@@ -76,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="중복되는 아이디입니다. 다시 설정해주세요."
+        android:visibility="invisible"
         android:textSize="12sp"
         android:layout_marginLeft="20sp"
         android:layout_marginTop="10sp"
@@ -88,10 +91,11 @@
     <EditText
         android:id="@+id/password_edit"
         android:layout_width="375sp"
-        android:layout_height="36sp"
+        android:layout_height="45sp"
         android:layout_gravity="center"
         android:background="@drawable/edittext_custom"
-        android:hint="  비밀번호 입력   "
+        android:paddingLeft="10sp"
+        android:hint="비밀번호 입력"
         android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@id/caution_tv"
         app:layout_constraintLeft_toLeftOf="@id/id_edit"
@@ -101,21 +105,22 @@
 
     <EditText
         android:id="@+id/password_chk_edit"
-        android:layout_width="282sp"
-        android:layout_height="36sp"
+        android:layout_width="242sp"
+        android:layout_height="45sp"
         android:layout_gravity="center"
         android:layout_marginLeft="18sp"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
-        android:hint="  비밀번호 재입력   "
+        android:hint="비밀번호 재입력"
+        android:paddingLeft="10sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/pw_chk_btn"
         app:layout_constraintTop_toBottomOf="@id/password_edit" />
 
     <Button
         android:id="@+id/pw_chk_btn"
-        android:layout_width="78sp"
-        android:layout_height="36sp"
+        android:layout_width="118sp"
+        android:layout_height="45sp"
         android:text="확인"
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
@@ -130,6 +135,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="최소 10자 이상 입력해주세요."
+        android:visibility="invisible"
         android:textSize="12sp"
         android:layout_marginLeft="20sp"
         android:layout_marginTop="10sp"
@@ -137,47 +143,62 @@
         app:layout_constraintTop_toBottomOf="@id/password_chk_edit"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <TextView
+        android:id="@+id/caution_tv3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="전화번호"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_marginLeft="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/caution_tv2"
+        />
+
     <EditText
         android:id="@+id/phone_edit"
-        android:layout_width="282sp"
-        android:layout_height="36sp"
+        android:layout_width="242sp"
+        android:layout_height="45sp"
         android:layout_gravity="center"
         android:layout_marginLeft="18sp"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
-        android:hint="  전화번호 입력   "
+        android:hint="'-'없이 숫자만 입력"
+        android:paddingLeft="10sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/caution_tv2" />
+        app:layout_constraintTop_toBottomOf="@id/caution_tv3" />
 
     <Button
         android:id="@+id/phone_chk_btn"
-        android:layout_width="78sp"
-        android:layout_height="36sp"
+        android:layout_width="118sp"
+        android:layout_height="45sp"
         android:text="인증번호받기"
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
         android:layout_marginLeft="12sp"
         app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
         app:layout_constraintRight_toRightOf="@id/password_edit"
-        app:layout_constraintTop_toBottomOf="@id/caution_tv2"
+        app:layout_constraintTop_toBottomOf="@id/caution_tv3"
         android:background="@drawable/loginbutton_custom" />
 
     <EditText
         android:id="@+id/phone_chk_edit"
-        android:layout_width="282sp"
-        android:layout_height="36sp"
+        android:layout_width="242sp"
+        android:layout_height="45sp"
         android:layout_gravity="center"
         android:layout_marginLeft="18sp"
         android:layout_marginTop="10sp"
         android:background="@drawable/edittext_custom"
-        android:hint="  인증번호 입력   "
+        android:hint="인증번호 입력"
+        android:paddingLeft="10sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phone_edit" />
 
     <Button
         android:id="@+id/phone_chk_btn2"
-        android:layout_width="78sp"
-        android:layout_height="36sp"
+        android:layout_width="118sp"
+        android:layout_height="45sp"
         android:text="인증확인"
         android:textColor="@color/white"
         android:layout_marginTop="10sp"
@@ -189,12 +210,13 @@
 
     <Button
         android:layout_width="375sp"
-        android:layout_height="42sp"
+        android:layout_height="45sp"
         android:text="가입완료"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/phone_chk_edit"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="320sp"
+        android:layout_marginBottom="20sp"
         android:textSize="15sp"
         android:textColor="@color/white"
         android:background="@drawable/loginbutton_custom"
