--- a/app/src/main/res/layout/mypage_interest_item.xml
+++ b/app/src/main/res/layout/mypage_interest_item.xml
@@ -82,15 +82,15 @@
         android:scrollbars="vertical"
         />
 
+
     <View
         android:id="@+id/divider"
+        android:background="@color/light_gray"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/gray"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10sp"
-        />
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 <!--    TODO 서연이가 하트 작업할거임.-->
 
