--- a/app/src/main/res/layout/chatting_detail.xml
+++ b/app/src/main/res/layout/chatting_detail.xml
@@ -28,12 +28,12 @@
             android:layout_gravity="center_horizontal"/>
     </androidx.appcompat.widget.Toolbar>
 
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewChat"
         android:listSelector="#00000000"
         android:cacheColorHint="#00000000"
         android:divider="#000000"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:transcriptMode="alwaysScroll"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
