--- a/app/src/main/res/layout/chatting_right_text.xml
+++ b/app/src/main/res/layout/chatting_right_text.xml
@@ -22,6 +22,7 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toLeftOf="@id/chatTextMy"
