--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -21,7 +21,7 @@
         android:fontFamily="@font/font_signiture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="회원가입 "
+        android:text="회원가입"
         android:layout_marginTop="20sp"
         android:layout_marginLeft="10sp"
         android:textSize="32sp"
@@ -74,7 +74,7 @@
         android:background="@drawable/loginbutton_custom" />
 
     <TextView
-        android:id="@+id/caution_tv"
+        android:id="@+id/caution_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="중복되는 아이디입니다. 다시 설정해주세요."
@@ -97,7 +97,7 @@
         android:paddingLeft="10sp"
         android:hint="비밀번호 입력"
         android:layout_marginTop="10sp"
-        app:layout_constraintTop_toBottomOf="@id/caution_tv"
+        app:layout_constraintTop_toBottomOf="@id/caution_text"
         app:layout_constraintLeft_toLeftOf="@id/id_edit"
         />
 
@@ -131,7 +131,7 @@
         android:background="@drawable/loginbutton_custom" />
 
     <TextView
-        android:id="@+id/caution_tv2"
+        android:id="@+id/pw_caution_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="최소 10자 이상 입력해주세요."
@@ -144,7 +144,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/caution_tv3"
+        android:id="@+id/tel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="전화번호"
@@ -153,7 +153,7 @@
         android:textSize="15sp"
         android:layout_marginLeft="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/caution_tv2"
+        app:layout_constraintTop_toBottomOf="@id/pw_caution_text"
         />
 
     <EditText
@@ -167,7 +167,7 @@
         android:hint="'-'없이 숫자만 입력"
         android:paddingLeft="10sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/caution_tv3" />
+        app:layout_constraintTop_toBottomOf="@id/tel" />
 
     <Button
         android:id="@+id/phone_chk_btn"
@@ -179,7 +179,7 @@
         android:layout_marginLeft="12sp"
         app:layout_constraintLeft_toRightOf="@id/password_chk_edit"
         app:layout_constraintRight_toRightOf="@id/password_edit"
-        app:layout_constraintTop_toBottomOf="@id/caution_tv3"
+        app:layout_constraintTop_toBottomOf="@id/tel"
         android:background="@drawable/loginbutton_custom" />
 
     <EditText
@@ -196,7 +196,7 @@
         app:layout_constraintTop_toBottomOf="@id/phone_edit" />
 
     <Button
-        android:id="@+id/phone_chk_btn2"
+        android:id="@+id/certification_btn"
         android:layout_width="118sp"
         android:layout_height="45sp"
         android:text="인증확인"
