--- a/app/src/main/res/layout/login_signup.xml
+++ b/app/src/main/res/layout/login_signup.xml
@@ -218,6 +218,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="320sp"
         android:layout_marginBottom="20sp"
+        android:enabled="false"
         android:textSize="15sp"
         android:textColor="@color/white"
         android:background="@drawable/loginbutton_custom"
