--- a/app/src/main/res/layout/login_singup2.xml
+++ b/app/src/main/res/layout/login_singup2.xml
@@ -80,7 +80,7 @@
         >
 
         <EditText
-            android:id="@+id/loginId"
+            android:id="@+id/nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="사용하실 닉네임을 입력해주세요."
@@ -94,6 +94,7 @@
         android:layout_width="78sp"
         android:layout_height="36sp"
         android:text="설정 완료"
+        android:id="@+id/nickConfirm"
         app:layout_constraintRight_toRightOf="@id/layout1"
         app:layout_constraintTop_toBottomOf="@id/layout1"
         android:layout_marginTop="20sp"
