--- a/app/src/main/res/layout/login_signup3.xml
+++ b/app/src/main/res/layout/login_signup3.xml
@@ -4,49 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
+        <ImageView
+            android:layout_width="27dp"
+            android:layout_height="27dp"
+            android:src="@drawable/icon_close"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="내 동네 설정"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_marginLeft="30dp"
+            />
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
-        android:id="@+id/imglogo"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/logo"
-        android:layout_marginLeft="10sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-    <TextView
-        android:id="@+id/title"
-        android:fontFamily="@font/font_signiture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="동네 설정 "
-        android:layout_marginTop="20sp"
-        android:layout_marginLeft="10sp"
-        android:textSize="32sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imglogo"
-        app:layout_constraintBottom_toBottomOf="@id/imglogo"
-        android:textColor="@color/navy"
-        />
 
     <net.daum.mf.map.api.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="80dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <Button
         android:id="@+id/townButton1"
