--- a/app/src/main/res/layout/home_posting.xml
+++ b/app/src/main/res/layout/home_posting.xml
@@ -188,7 +188,7 @@
     <TextView
         android:id="@+id/textContent"
         android:fontFamily="@font/pretendard_bold"
-        android:text="게시글 제목"
+        android:text="게시글 내용"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_width="wrap_content"
